# solana-multisig-dao

./: .gitignore  README.md
.github/workflows/: autotest.yml
multisig/: README.md
offchain/create-defn-token/: .env  .env.example  autotest.ts  gen-instruction.ts  mint.ts  package-lock.json  package.json  readme.md
offchain/token-management/: token-mgmt.cli
onchain/multisig/: .travis.yml  Anchor.toml  README.md
onchain/multisig/programs/multisig/: Cargo.toml
onchain/multisig/programs/multisig/src/: lib.rs
onchain/odf-dao/: Anchor.toml  README.md  package.json
onchain/odf-dao/app/api/instructions/: index.ts
onchain/odf-dao/app/api/instructions/member/: editUserMetadata.ts  index.ts  initFreezer.ts
onchain/odf-dao/app/api/instructions/organization/: addTeamMember.ts  createOrganization.ts  editOrganizationSettings.ts  index.ts  removeTeamMember.ts
onchain/odf-dao/app/api/types/: index.ts  odf-dao.ts
onchain/odf-dao/app/api/utils/: index.ts  pda.ts
onchain/odf-dao/programs/odf-dao/: Cargo.toml
onchain/odf-dao/programs/odf-dao/src/: errors.rs  lib.rs
onchain/odf-dao/tests/member/: userMetadata.test.ts
onchain/odf-dao/tests/organization/: addAndRemoveTeamMember.test.ts  organization.test.ts
onchain/odf-dao/tests/proposal/: proposal.test.ts
onchain/odf-dao/tests/utils/: createAndExecuteProposal.ts
onchain/odf-stake/: Anchor.toml  README.md  package.json
onchain/odf-stake/programs/odf-stake/: Cargo.toml
onchain/odf-stake/programs/odf-stake/src/: constant.rs  errors.rs  lib.rs
onchain/odf-stake/tests/: odf-stake.ts  token_helper.ts
(+36 files in other folders)
