[package]
name = "odf-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "odf_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
solana-program = "1.10.29"
anchor-lang = "0.25.0"
anchor-spl = { version = "0.25.0", features = ["devnet"] }

[dev-dependencies]
assert_matches = "1.5.0"
solana-sdk = "1.10.29"
solana-program-test = "1.10.29"